--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Ronil Cajan Portfolio</title>
 		<meta charset="utf-8" />
+		<meta name="referrer" content="origin">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
@@ -118,7 +119,7 @@
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p class="icon solid fa-address-card"><span class="label">Address</span> Looc Proper, Plaridel, Misamis Occidental, Philippines 7209</p>
-									<form action="https://formspree.io/ronil.cajan@gmail.com" method="POST">
+									<form  method="POST" action="https://formspree.io/ronil.cajan@gmail.com">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="col-6 col-12-xsmall"><input type="email" name="_replyto" id="email" placeholder="Email"/></div>
