--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p class="icon solid fa-address-card"><span class="label">Address</span> Looc Proper, Plaridel, Misamis Occidental, Philippines 7209</p>
-									<form  method="POST" action="https://formspree.io/ronilcajan@gmail.com">
+									<form  method="POST" action="https://formspree.io/cajanronil@gmail.com">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="col-6 col-12-xsmall"><input type="email" name="_replyto" id="email" placeholder="Email"/></div>
