--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<li><a href="https://www.instagram.com/c_roonil" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 						<li><a href="https://www.github.com/Ronc122" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/roncajan" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-						<li><a href="mailto:ronil.cajan@gmail.com?Subject=Hello%20again" target="_top" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:cajanronil@gmail.com?Subject=Hello%20again" target="_top" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
