--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p class="icon solid fa-address-card"><span class="label">Address</span> Looc Proper, Plaridel, Misamis Occidental, Philippines 7209</p>
-									<form  method="POST" action="https://formspree.io/cajanronil@gmail.com">
+									<form method="POST" action="https://formspree.io/cajanronil@gmail.com">
 										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="_replyto" id="email" placeholder="Email"/></div>
+											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Your Name" /></div>
+											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email"/></div>
 											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
+											<div class="col-12"><textarea name="message" id="message" placeholder="Your Message" rows="6"></textarea></div>
 											<div class="col-12">
 												<ul class="actions">
 													<li><input type="submit" class="primary" value="Send Message" /></li>
