--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Technology Capable of</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#about" class="active">About</a></li>
+						<li><a href="#technology">Technology Capable of</a></li>
+						<li><a href="#accomplishment">A Few Accomplishments</a></li>
+						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -43,7 +43,7 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
+							<section id="about">
 								<div class="image main" data-position="center">
 									<img src="images/cover.jpg" alt="" />
 								</div>
@@ -61,7 +61,7 @@
 							</section>
 
 						<!-- Two -->
-							<section id="two">
+							<section id="technology">
 								<div class="container">
 									<h3>Technology capable of</h3>
 									<p>Below is the list of technology that I'm familiar so far:</p>
@@ -84,7 +84,7 @@
 							</section>
 
 						<!-- Three -->
-							<section id="three">
+							<section id="accomplishment">
 								<div class="container">
 									<h3>A Few Accomplishments</h3>
 									<p>One of the best feeling is when someone using your works and seeing they love what they see. Below is my latest sample works.</p>
@@ -115,11 +115,12 @@
 							</section>
 
 						<!-- Four -->
-							<section id="four">
+							<section id="contact">
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p class="icon solid fa-address-card"><span class="label">Address</span> Looc Proper, Plaridel, Misamis Occidental, Philippines 7209</p>
-									<form method="POST" action="http://formspree.io/cajanronil@gmail.com">
+									<form action="https://formsubmit.io/send/04f2212d-8220-42ca-87be-54cd385368ba" method="POST">
+										<input name="_redirect" type="hidden" id="name" value="http://ronilcajan.github.io/#contact">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Your Name" /></div>
 											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email"/></div>
@@ -132,7 +133,6 @@
 												</ul>
 											</div>
 										</div>
-										<input type="text" name="_gotcha" style="display:none;"/>
 									</form>
 								</div>
 							</section>
