--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 												</ul>
 											</div>
 										</div>
+										<input name="_formsubmit_id" type="text" style="display:none">
 									</form>
 								</div>
 							</section>
