--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li><a href="#about" class="active">About</a></li>
             <li><a href="#technology">Technology Capable of</a></li>
             <li><a href="#accomplishment">A Few Accomplishments</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#alert">Contact</a></li>
         </ul>
     </nav>
     <footer>
@@ -158,6 +158,7 @@
                 <strong>Danger!</strong> Indicates a dangerous or potentially negative action.
             </div>
         </section>
+
         <section id="contact">
             <div class="container">
                 <h3>Contact Me</h3>
