--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <img src="images/bootstrap.png" height="50" width="50"/>
                     <img src="images/jquery.png" height="50" width="50"/>
                 </div>
-                <div style="display:flex; flex-wrap:wrap; justify-content:space-around;">
+                <div style="display:flex; flex-wrap:wrap; justify-content:space-around; margin-bottom:20px;">
                     <img src="images/php.png" height="50" width="50"/>
                     <img src="images/wordpress.png" height="50" width="50"/>
                     <img src="images/sql.png" height="50" width="50"/>
