--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ display:none;
                 <p class="icon solid fa-address-card"><span class="label">Address</span> Looc Proper, Plaridel, Misamis
                     Occidental, Philippines 7209</p>
                 <form action="https://formsubmit.io/send/04f2212d-8220-42ca-87be-54cd385368ba" method="POST">
-                    <input name="_redirect" type="hidden" id="name" value="http://ronilcajan.github.io/1">
+                    <input name="_redirect" type="hidden" id="name" value="http://ronilcajan.github.io/#alert">
                     <div class="row gtr-uniform">
                         <div class="col-6 col-12-xsmall"><input type="text" name="name" id="name"
                                                                 placeholder="Your Name"/></div>
@@ -214,7 +214,7 @@ display:none;
 <script type="text/javascript">
     $(document).ready(function(){
         var site = window.location.href;
-        if(site == "https://ronilcajan.github.io/1"){
+        if(site == "https://ronilcajan.github.io/#alert"){
             document.getElementById("section.alert").style.visibility='visible';
         }
 })
