--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- Main -->
     <div id="main">
 
-        <!-- One -->
+        <!-- about -->
         <section id="about">
             <div class="image main" data-position="center">
                 <img src="images/cover.jpg" alt=""/>
@@ -90,7 +90,7 @@
             </div>
         </section>
 
-        <!-- Two -->
+        <!-- technology -->
         <section id="technology">
             <div class="container">
                 <h3>Technology capable of</h3>
@@ -113,7 +113,7 @@
             </div>
         </section>
 
-        <!-- Three -->
+        <!-- accomplishment -->
         <section id="accomplishment">
             <div class="container">
                 <h3>A Few Accomplishments</h3>
@@ -130,7 +130,7 @@
                         </div>
                     </article>
                     <article>
-                        <a href="https://www.bambamfoodproducts.com" class="image"><img src="images/bambam.png" alt=""/></a>
+                        <a href="https://www.bambamfoodproducts.com" target="_blank" class="image"><img src="images/bambam.png" alt=""/></a>
                         <div class="inner">
                             <h4>Bambam Food Products</h4>
                             <p>A family company that specialized in all kinds of cakes and can cater wedding cakes,
@@ -138,7 +138,7 @@
                         </div>
                     </article>
                     <article>
-                        <a href="https://www.bravoinfiniteweb.com" class="image"><img src="images/bravo.png"
+                        <a href="https://www.bravoinfiniteweb.com" target="_blank" class="image"><img src="images/bravo.png"
                                                                                       alt=""/></a>
                         <div class="inner">
                             <h4>Bravo Infinite Enterprise</h4>
