Add new project

--- a/index.html
+++ b/index.html
@@ -72,12 +72,14 @@
     </nav>
     <footer>
         <ul class="icons">
-            <li><a href="https://www.github.com/ronilcajan" class="icon brands fa-github" target="_blank"><span
+            <li><a href="https://www.github.com/ronilcajan" class="icon brands fa-github" target="_blank" title="Github"><span
                     class="label">Github</span></a></li>
-            <li><a href="https://www.linkedin.com/in/roncajan" class="icon brands fa-linkedin" target="_blank"><span
+            <li><a href="https://www.linkedin.com/in/roncajan" class="icon brands fa-linkedin" target="_blank" title="LinkedIn"><span
                     class="label">LinkedIn</span></a></li>
             <li><a href="mailto:cajanronil@gmail.com?Subject=Hello%20again" target="_top"
-                   class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+                   class="icon solid fa-envelope" title="Contact Email"><span class="label">Email</span></a></li>
+            <li><a href="images/resume.pdf" class="icon fa-file" target="_blank" title="Resume"><span
+                    class="label">Resume</span></a></li>
         </ul>
     </footer>
 </section>
@@ -120,6 +122,7 @@
                     <img src="images/js.png" height="50" width="50"/>
                     <img src="images/bootstrap.png" height="50" width="50"/>
                     <img src="images/jquery.png" height="50" width="50"/>
+                    <img src="images/codeigniter.svg" height="50" width="50"/>
                 </div>
                 <div style="display:flex; flex-wrap:wrap; justify-content:space-around; margin-bottom:20px;">
                     <img src="images/php.png" height="50" width="50"/>
@@ -160,60 +163,52 @@
                                 </div>
                             </article>
                     <article>
-                        <a href="https://www.theamariebakehaus.com/" target="_blank" class="image"><img
-                                src="images/thea.png" alt=""/></a>
+                        <a href="https://youtu.be/JX2KH0KlTC4" target="_blank" class="image"><img
+                                src="images/inventory.png" alt=""/></a>
                         <div class="inner">
-                            <h4>Thea Marie Bakehaus</h4>
-                            <p>A small, family owned and managed single proprietorship bakery in the suburb of Tangub City.</p> 
+                            <h4>Inventory System</h4>
+                            <p>A simple web inventory system using CodeIgniter 3.</p> 
                             <div id="button-user">
-                            <a href="https://www.theamariebakehaus.com/" id="site" target="_blank">View Site</a>
+                            <a href="https://youtu.be/JX2KH0KlTC4" id="site" target="_blank">Youtube</a>
                         </div>
                             <div id="icon-contain">
-                                    <p style="margin-top: 5px; font-size:small"><small>Technology:</small></p> 
-                                    <img id="icon-use" src="images/wordpress.png" height="20" width="20"/>
+                                    <p style="margin-top: 5px; font-size:small"><small>Technology:</small></p>
+                                    <img id="icon-use" src="images/php.png" height="20" width="20"/> 
+                                    <img id="icon-use" src="images/codeigniter.svg" height="20" width="20"/>
+                                    <img id="icon-use" src="images/sql.png" height="20" width="20"/>
+                                    <img id="icon-use" src="images/jquery.png" height="20" width="20"/>
+                                    <img id="icon-use" src="images/bootstrap.png" height="20" width="20"/>
                                 </div>
                                 
                         </div>
                     </article>
                     <article>
-                        <a href="https://www.bambamfoodproducts.com" target="_blank" class="image"><img src="images/bambam.png" alt=""/></a>
+                        <a href="https://youtu.be/kjO7qo3ns28" target="_blank" class="image"><img src="images/shoutout.png" alt=""/></a>
                         <div class="inner">
-                            <h4>Bambam Food Products</h4>
-                            <p>A family company that specialized in all kinds of cakes and can cater wedding cakes,
-                                birthdays and other celebrations. 
+                            <h4>ShoutOut - A Simple Social Media</h4>
+                            <p>A simple social media platform built with CodeIgniter 3.</p>
                                 <div id="button-user">
-                                <a href="https://www.bambamfoodproducts.com" target="_blank" id="site">View Site</a>
+                                <a href="https://youtu.be/kjO7qo3ns28" target="_blank" id="site">Youtube</a>
                                 </div>
                                 <div id="icon-contain">
                                         <p style="margin-top: 5px; font-size:small"><small>Technology:</small></p> 
-                                        <img id="icon-use" src="images/wordpress.png" height="20" width="20"/>
+                                        <img id="icon-use" src="images/php.png" height="20" width="20"/> 
+                                    <img id="icon-use" src="images/codeigniter.svg" height="20" width="20"/>
+                                    <img id="icon-use" src="images/sql.png" height="20" width="20"/>
+                                    <img id="icon-use" src="images/jquery.png" height="20" width="20"/>
+                                    <img id="icon-use" src="images/bootstrap.png" height="20" width="20"/>
                                     </div>
                             </p>
                         </div>
                     </article>
-                    <article>
-                        <a href="https://www.bravoinfiniteweb.com" target="_blank" class="image"><img src="images/bravo.png" alt=""/></a>
-                        <div class="inner">
-                            <h4>Bravo Infinite Enterprise</h4>
-                            <p>Owned by Engr. Julius B. Bularon, an experienced practitioner in engineering.
-                            </p>
-                            <div id="button-user">   
-                            <a href="https://www.bravoinfiniteweb.com" id="site" target="_blank">View Site</a>
-                            </div>    
-                            <div id="icon-contain">
-                                        <p style="margin-top: 5px; font-size:small"><small>Technology:</small></p> 
-                                        <img id="icon-use" src="images/wordpress.png" height="20" width="20"/>
-                                    </div>
-                        </div>
-                    </article>
+                    
                 </div>
             </div>
         </section>
         <section id="contact">
             <div class="container">
                 <h3>Let's work together</h3>
-                <p class="icon solid fa-address-card"><span class="label">Address</span> Looc Proper, Plaridel, Misamis
-                    Occidental, Philippines 7209</p>
+                <p class="icon solid fa-address-card"><span class="label">Address</span> Philippines </p>
                 <form action="https://formsubmit.io/send/04f2212d-8220-42ca-87be-54cd385368ba" method="POST">
                     <input name="_redirect" type="hidden" id="name" value="http://ronilcajan.github.io?result=succes">
                     <div class="row gtr-uniform">
