Change project title

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			</section>
 
 			<section id="project" class="mx-auto row">
-				<h3 class="text-center">Recent <span>Projects</span></h3><br>
+				<h3 class="text-center">Some <span>Projects</span></h3><br>
 				<div class="card-group">
   					<div class="row row-cols-1 row-cols-md-3 g-4">
   						<div class="col" data-aos="zoom-in">
