--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				    <div class="d-flex justify-content-center mb-5">
 			    		<a href="https://github.com/ronilcajan" target="_blank" class="icons ml-3 mr-3" title="My Github Code"><i class="icon" data-feather="github"></i></a>
 			    		<a href="https://www.linkedin.com/in/roncajan" target="_blank" class="icons ml-3 mr-3" title="My Linkedin Profile"><i class="icon"  data-feather="linkedin"></i></a>
-			    		<a class="icons ml-3 mr-3" href="images/resume.pdf" target="_blank" title="Download CV"><i class="icon"  data-feather="file-text"></i></a>
+			    		<a class="icons ml-3 mr-3" href="images/RonilCajan_Resume.pdf" target="_blank" title="Download CV"><i class="icon"  data-feather="file-text"></i></a>
 				    </div>
 				    <a href="#" data-page="about" title="Scroll Down">
 				    	<i class="arrow-down"  data-feather="chevrons-down">
