Modified resume and img alt tag

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<section id="home" class="text-center">
 				<div id="particles"></div>
 				<div class="content">
-					<img class="img-fluid rounded-circle img-thumbnail border" src="images/ron_cajan_avatar.png" height="100" width="100">
+					<img class="img-fluid rounded-circle img-thumbnail border" src="images/ron_cajan_avatar.png" height="100" width="100" alt="Ronil Cajan Avatar">
 					<p class="mb-0">Hi, I Am</p>
 				    <h1 class="cover-heading">Ronil Cajan</h1>
 				    <p class="lead">I Build Things for The Web.</p>
@@ -79,7 +79,7 @@
 			<section id="about" class="mx-auto row mt-3 ">
 				<h3 class="text-center"><span>About</span> Me</h3>
 				<div class="col-6 about-content" data-aos="zoom-in-right">
-					<img class="img-fluid" heigh="400" width="400" src="images/ron_cajan_about.jpg">
+					<img class="img-fluid" heigh="400" width="400" src="images/ron_cajan_about.jpg" alt="Ronil Cajan About Me">
 				</div>
 				<div class="col-6 about-content" data-aos="zoom-in-left">
 					<p>I am <strong style="color: #008D75;">dedicated and passionate</strong> about creating web experiences that improves business and personal lives.</p>
@@ -93,7 +93,7 @@
   					<div class="row row-cols-1 row-cols-md-3 g-4">
   						<div class="col" data-aos="zoom-in">
 						    <div class="card h-100 shadow" >
-						      	<img src="images/claims.png" class="card-img-top img-fluid" alt="...">
+						      	<img src="images/claims.png" class="card-img-top img-fluid" alt="Ronil Cajan Loan Application">
 						      	<div class="card-body">
 							        <h5 class="card-title font-weight-bold">Loan Application System</h5>
 							        <p class="card-text">This is a web-based loan application system built with Codeigniter 3 framework.</p>
@@ -113,7 +113,7 @@
 					  	</div>
 						<div class="col" data-aos="zoom-in">
 						    <div class="card h-100 shadow">
-							    <img src="images/shoutout.png" class="card-img-top img-fluid" alt="...">
+							    <img src="images/shoutout.png" class="card-img-top img-fluid" alt="Ronil Cajan ShoutOut">
 							    <div class="card-body">
 							        <h5 class="card-title font-weight-bold">ShoutOut</h5>
 							        <p class="card-text">This is a simple social media web app built with codeigniter 3 framework.</p>
@@ -133,7 +133,7 @@
 						</div>
 						<div class="col" data-aos="zoom-in">
 					    	<div class="card h-100 shadow">
-					      		<img src="images/pos.png" class="card-img-top img-fluid" alt="...">
+					      		<img src="images/pos.png" class="card-img-top img-fluid" alt="Ronil Cajan Point of Sale">
 				      			<div class="card-body">
 				        			<h5 class="card-title font-weight-bold">Point of Sale on PHP</h5>
 				        			<p class="card-text">This is a simple web-based POS system using PHP language.</p>
@@ -179,7 +179,7 @@
        		<section id="interest" class="mx-auto row mt-3">
 				<h3 class="text-center">My <span>Interest</span></h3>
 				<div class="col-6 about-content" data-aos="zoom-in-right">
-					<img class="img-fluid" height="400" width="400" src="images/roncajan_interest.jpg">
+					<img class="img-fluid" height="400" width="400" src="images/roncajan_interest.jpg" alt="Ronil Cajan Interest">
 				</div>
 				<div class="col-6 about-content" data-aos="zoom-in-left">
 					<p>I'm a fan of <strong style="color: #008D75;">cryptocurrency and blockchain technology.</strong> This technology helps me to buy my first laptop for my studies in year 2018 through airdrop and referrals. This is when I realized technology is the future.</p>
