Fix width issue

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 			</section>
 
-			<section id="about" class="mx-auto row mt-3 ">
+			<section id="about" class="mx-auto row mt-3 " style="overflow-x:hidden;">
 				<h3 class="text-center"><span>About</span> Me</h3>
 				<div class="col-6 about-content" data-aos="zoom-in-right">
 					<img class="img-fluid" heigh="400" width="400" src="images/ron_cajan_about.jpg" alt="Ronil Cajan About Me">
@@ -87,7 +87,7 @@
 				</div>
 			</section>
 
-			<section id="project" class="mx-auto row">
+			<section id="project" class="mx-auto row" style="overflow-x:hidden;">
 				<h3 class="text-center">Some <span>Projects</span></h3><br>
 				<div class="card-group">
   					<div class="row row-cols-1 row-cols-md-3 g-4">
@@ -176,7 +176,7 @@
 	            </div>
        		</section>
 
-       		<section id="interest" class="mx-auto row mt-3">
+       		<section id="interest" class="mx-auto row mt-3" style="overflow-x:hidden;" >
 				<h3 class="text-center">My <span>Interest</span></h3>
 				<div class="col-6 about-content" data-aos="zoom-in-right">
 					<img class="img-fluid" height="400" width="400" src="images/roncajan_interest.jpg" alt="Ronil Cajan Interest">
