Fix grammar error

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 	                    <img src="images/sql.png" height="50" width="50"/>
 	                    <img src="images/git.png" height="50" width="50"/>
 	                </div>
-	                <p class="text-center mt-3">This are some tools that I used in my <strong style="color: #008D75;">web development career.</strong></p>
+	                <p class="text-center mt-3">These are some tools that I used in my <strong style="color: #008D75;">web development career.</strong></p>
 	            </div>
        		</section>
 
